--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "faker": "^5.3.1",
     "method-override": "^3.0.0",
     "pg": "^8.5.1",
+    "pusher": "^5.0.0",
     "sequelize": "^6.3.5"
   }
 }
