--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "faker": "^5.3.1",
+    "jssha": "^3.2.0",
     "method-override": "^3.0.0",
     "pg": "^8.5.1",
     "pusher": "^5.0.0",
