--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "sequelize-cli": "^6.2.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.932.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "faker": "^5.3.1",
     "jssha": "^3.2.0",
     "method-override": "^3.0.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "pg": "^8.5.1",
     "pusher": "^5.0.0",
     "sequelize": "^6.3.5"
